// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "google/protobuf/descriptor.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

message EventGroupMetadataDescriptor {
  fixed64 external_data_provider_id = 1;
  fixed64 external_event_group_metadata_descriptor_id = 2;

  string idempotency_key = 4;

  message Details {
    // Version of the public API for serialized message definitions.
    string api_version = 1;

    // FileDescriptorSet of the original metadata proto message.
    google.protobuf.FileDescriptorSet descriptor_set = 2;
  }

  Details details = 3;
}
